theme/mindcrack/assets/stylesheets/style.scss
/* ... */
.news-item {
	display: block; // needed to override in case it's an <a> tag

	.detail {
		@extend .text-muted;
	}

	h1 + .detail, h2 + .detail {
		margin-top: -0.75rem;
	}

	.detail + p {
		margin-top: 1rem;
	}

	@include media-breakpoint-down(xs) {
		h2 {font-size:$font-size-h2 / 1.75}
		h1 {font-size:$font-size-h1 / 1.75}
	}

	&.news-item-list {
		margin-bottom: 1rem;

		&:first-child {
			margin-top: 0;
		}

		@include make-row();
		@include make-col();
		@include make-col-span(12);

		.news-item-thumb {
			@include make-col();
			@include make-col-span(3);

			img {
				width: 100%;
				height: auto;
			}

			div.no-thumb {
				width: 100%;
			}
		}

		.news-item-body {
			@include make-col();
			@include make-col-span(9);
		}

		@include media-breakpoint-down(md) {
			@include make-row(1rem);

			.news-item-thumb, .news-item-body {
				@include make-col(1rem);
			}
		}

		@include media-breakpoint-up(md) {
			margin-bottom: 2rem;

			&:last-child {
				margin-bottom: 1rem;
			}
		}
	}

	&.news-item-latest {
		
		.published {
			// Used to switch ordering
			display: table-footer-group;
		}

		h2 {
			// Used to switch ordering
			display: table-header-group; 

			// Custom style
			font-size: 1.125rem;
			color: $gray-dark;
			font-weight:500;
		}

		&:hover h2 {
			color: lighten($gray-dark, 20%)
		}

		@include media-breakpoint-up(md) {
			@include make-col-span(4);
			margin-left: 0;
			margin-right: 0;

			.news-item-thumb, .news-item-body {
				padding: 0;
				width:100%;

				.published, h2 {
					display: block;
				}
			}

			.published {
				margin-top: 0.5rem;
				margin-bottom:0.25rem;
			}
		}
	}

	figure {
		@extend .figure;
		margin-top: 1rem;
		margin-bottom: 1rem;

		img {
			@extend .figure-img;
			@extend .img-fluid;
		}

		figcaption {
			@extend .figure-caption;
		}
	}

	figure.main-image {
		@extend .center-block;

		@include media-breakpoint-up(md) {
			margin-top: 2rem;
			margin-bottom: 2rem;
			width: 75%;
		}

		figcaption {
			@extend .text-xs-right;
		}
	}
}

.news-list {
	@include make-row();

	hr {
		width: calc(100% - #{$grid-gutter-width});
		display: block;

		@include media-breakpoint-up(md) {
			margin-bottom: 2rem;
		}
	}
}

section#latest-news {
	@extend .news-list;
}

article.member-list {
	@include make-col();
	@include make-col-span(3);
	margin-bottom: 1rem;

	.member-thumb {
		width: 100%;
		margin-bottom: 0.75rem;
		img {
			width: 100%;
			height: auto;
		}
	}

	h2 {
		font-size: 4.5vw;
	}

	@include media-breakpoint-up(xs) {
		.member-thumb { margin-bottom: 2.25vw; }
		margin-bottom: 1.75vw;
	}
	@include media-breakpoint-up(sm) {
		h2 { font-size: 1.5rem; }
	}
	@include media-breakpoint-up(md) {
		h2 { font-size: 1rem; }
		.member-thumb { margin-bottom: 0.5rem; }
		margin-bottom: 0.4rem;
	}
	@include media-breakpoint-up(lg) {
		h2 { font-size: 1.3rem; }
	}
	@include media-breakpoint-up(xl) {
		h2 { font-size: 1.5rem; }
	}
}

.member-row-2 {
	@include media-breakpoint-down(sm) {
		@include clearfix();
		article.member-list {
			@include make-col-span(6);
		}
	}
}

.member-row-4 {
	@include make-row();
}

// Less than ideal non-flex solutions for older IE
.lt-ie10 {
	.about-panel-stat-line .container{

		div {
			text-align: justify;
			font-size: 0;
			&>span {
				display:inline-block;
				vertical-align: middle;
				font-size:1rem;
			}

			&:after {
				content: "";
				display: inline-block;
				width: 100%;
			}
		}

		&>span.h4 {
			display: block;
			font-size: $font-size-h4;
			margin: 0;
			margin-right: 2rem;
			@include pull-left;
		}

	}

	header#main-header {
		background-image: url('../images/mindcrack_header.jpg');
		background-size: cover;
		background-position: 50% 55%;
		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#14000000', endColorstr='#191919',GradientType=0 ),
				progid:DXImageTransform.Microsoft.gradient( startColorstr='#40000000', endColorstr='#40191919',GradientType=0 );
		&:before {
			background-image: none;
		}

		@include media-breakpoint-down(xs) {
			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#20000000', endColorstr='#191919',GradientType=0 ),
					progid:DXImageTransform.Microsoft.gradient( startColorstr='#90000000', endColorstr='#70191919',GradientType=0 );
		}
	}
}

